--- a/src/components/_JournalPagesList.scss
+++ b/src/components/_JournalPagesList.scss
@@ -1,6 +1,8 @@
 .JournalPagesList {
   border-right: 1px solid $border-color;
   height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   > .list-group {
     margin: -1px;
